<resources>
    <string name="app_name">EBus</string>
    <string name="signup_page_label">Sign up</string>
    <string name="signup_email_id_lbl">Email ID</string>
    <string name="signup_fullname_lbl">Full name</string>
    <string name="signup_mobile">Mobile</string>
    <string name="signup_password_lbl">Password</string>
    <string name="signup_confirm_pw_lbl">Confirm Password</string>
    <string name="person_icon">person icon</string>
    <string name="at_sign">at sign</string>
    <string name="signup_main_banner_image">signup main banner image</string>
    <string name="mobile_icon">mobile icon\n</string>
    <string name="password_icon">password icon</string>
    <string name="confirm_password_icon">confirm password lock outline icon</string>
    <string name="signup_button_lbl">Sign up</string>
    <string name="login_page_banner_img">login page banner image\n</string>
    <string name="login_heading">Login</string>
    <string name="email_icon_desc">email icon</string>
    <string name="login_email_field_lbl">Email ID</string>
    <string name="password_icon_desc">password icon</string>
    <string name="password_login_hint">Password</string>
    <string name="login_btn_lbl">Login</string>
    <string name="or">or</string>
    <string name="signup_link_lbl">Tap here to sign up!</string>
    <string name="find_routes_heading">Find your bus</string>
    <string name="search_icon">search icon</string>
    <string name="where_to">Where to?</string>
    <string name="find_routes_btn_lbl">Search a route</string>
    <string name="bus_info">Bus info</string>
    <string name="app_label">EBus\n</string>
    <string name="logout_lbl">Logout</string>
    <string name="routes_heading">Routes</string>
    <string name="location_placeholder">Your location</string>
    <string name="destination_placeholder">Your destination</string>
    <string name="to_label">to</string>
    <string name="routes_instructions">Pick your bus.\nTap a route to view bus information.</string>
    <string name="driver_lbl">Driver</string>
    <string name="conductor_lbl">Conductor</string>
    <string name="driver_details_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="vehicle_number">XXXXXX - XXX</string>
    <string name="current_trip_heading">On your way!</string>
    <string name="est_arrival">Est. Arrival: 14.30</string>
    <string name="status_lbl">Status:</string>
    <string name="status">Still travelling</string>
    <string name="start_trip">Start Trip</string>
</resources>