<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/login_banner"
        android:layout_width="380dp"
        android:layout_height="290dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/login_page_banner_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/capa_1" />

    <TextView
        android:id="@+id/login_heading"
        style="@style/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:text="@string/login_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/disconnect_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_heading" />

    <ImageView
        android:id="@+id/email_icon"
        style="@style/input_icons"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/email_icon_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disconnect_warning"
        app:srcCompat="@drawable/ic_text_input_set" />

    <EditText
        android:id="@+id/emailid_login"
        style="@style/inputfield"
        android:layout_marginTop="10dp"
        android:autofillHints="Email ID"
        android:hint="@string/login_email_field_lbl"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disconnect_warning" />

    <ImageView
        android:id="@+id/password_icon"
        style="@style/input_icons"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/password_icon_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_icon"
        app:srcCompat="@drawable/ic_text_input_set4" />

    <EditText
        android:id="@+id/password_login"
        style="@style/inputfield"
        android:layout_marginTop="8dp"
        android:autofillHints="Password"
        android:hint="@string/password_login_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailid_login" />

    <Button
        android:id="@+id/login_btn"
        style="@style/custom_btn"
        android:layout_marginTop="16dp"
        android:text="@string/login_btn_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login" />

    <TextView
        android:id="@+id/or_txt"
        style="@style/bodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <TextView
        android:id="@+id/sign_up_link"
        style="@style/heading4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/signup_link_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or_txt" />

    <FrameLayout
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>