<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentTripActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_find_routes"
        android:name="com.ranmal.ebusapp.FindRoutesFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/find_route_form"
        android:layout_marginHorizontal="16dp"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="15dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline1">

        <TextView
            android:id="@+id/find_routes_heading"
            style="@style/title2"
            android:textSize="32sp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_trip_heading"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/time_est"
            style="@style/heading4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/est_arrival"
            android:paddingVertical="16dp"
            android:layout_gravity="center" />
        <TextView
            android:id="@+id/status_lbl"
            style="@style/bodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_lbl"
            android:paddingVertical="16dp"
            android:layout_gravity="center" />
        <TextView
            android:id="@+id/status"
            style="@style/bodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFA500"
            android:text="@string/status"
            android:paddingVertical="16dp"
            android:layout_gravity="center" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="420dp" />

</androidx.constraintlayout.widget.ConstraintLayout>