<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="0dp"
    tools:context=".FindRoutesActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_find_routes"
        android:name="com.ranmal.ebusapp.FindRoutesFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/find_route_form"
        android:layout_marginHorizontal="16dp"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="15dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline1">

        <TextView
            android:id="@+id/find_routes_heading"
            style="@style/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_routes_heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_bar_find_routes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/find_routes_icon"
                style="@style/input_icons"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/search_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/search" />

            <EditText
                android:id="@+id/search_routes"
                style="@style/inputfield"
                android:layout_marginTop="10dp"
                android:autofillHints="Email ID"
                android:hint="@string/where_to"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/find_routes_btn"
            style="@style/custom_btn"
            android:layout_marginTop="16dp"
            android:text="@string/find_routes_btn_lbl"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/search_bar_find_routes" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="470dp" />

</androidx.constraintlayout.widget.ConstraintLayout>